BE: API fixes for /fields - add humus_balance

--- a/soil-service/Gemfile
+++ b/soil-service/Gemfile
@@ -13,6 +13,8 @@ end
 
 group :development do
   gem 'listen', '~> 3.3'
+  gem 'guard'
+  gem 'guard-rspec', require: false
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
