- added docker setup for local development - added exception handler - added humus balance specs - added get crop method - added get field method - method to calculate humus balance - show previous humus_balance vs new humus balance - handle errors when field_id is not present - handle errors when field does not exists

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   soil-service:
     container_name: soil-service
     build: ./soil-service
+    command: bash -c "/code/start.sh"
     volumes:
       - ./soil-service:/code
     ports:
