--- a/soil-service/Gemfile
+++ b/soil-service/Gemfile
@@ -9,6 +9,7 @@ gem 'rails', '~> 6.1.3', '>= 6.1.3.1'
 group :development, :test do
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
   gem 'rspec-rails'
+  gem 'rubocop', require: false
 end
 
 group :development do
